<resources>
    <string name="app_name">Exo5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_menu_title">dashboard menu</string>
    <string name="detailsButton">DETAILS</string>
    <string name="detailsText">Details</string>
    <string name="basket_bottom">Basket</string>
    <string name="tennis">Tennis</string>
    <string name="tennis_title">Tennis</string>
    <string name="basket_title">Basket</string>
    <string name="hand">Hand</string>
    <string name="hand_bottom">Hand</string>
    <string name="info">Info</string>
    <string name="entrainement_title">Entrainement</string>
    <string name="contact_title">Contact</string>
    <string name="planning_title">Planning</string>
    <string name="pratique_title">Pratique</string>
</resources>